# msckf_tutorial

./: .gitignore  README.md  pyproject.toml  setup.py
docs/drawio_diagrams/: Axis drawing.drawio  Coordinate systems.drawio
examples/: run_on_euroc.py  run_on_vi_simulator.py  run_viewer_example.py
scripts/: scripts.py
src/: __init__.py  dataset_utils.py  feature_tracker.py  jpl_quat_ops.py  math_utilities.py  msckf.py  msckf_types.py  params.py  render_camera.py  render_primitives.py  spatial_transformations.py  triangulation.py  viewer.py
src/msckf_tutorial.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_msckf.py  test_msckf_tutorial.py  test_quaternions.py  test_triangulation.py  test_twopoint_ransac.py  utilities.py
